--- a/ForSuccess/Views/LoginView.xaml
+++ b/ForSuccess/Views/LoginView.xaml
@@ -7,31 +7,59 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    FontSize="24"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
+    <Border
+        Margin="25"
+        Padding="50"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Background="White"
+        BorderBrush="{StaticResource BrushPrimary2}"
+        BorderThickness="1"
+        CornerRadius="10">
 
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="300" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="아이디" />
-            <TextBox Grid.Column="1" Text="" />
-        </Grid>
+        <Border.Effect>
+            <DropShadowEffect BlurRadius="10" Color="{StaticResource ColorPrimary2}" />
+        </Border.Effect>
 
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="300" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="Password" />
-            <TextBox Grid.Column="1" Text="" />
+        <Grid Grid.IsSharedSizeScope="True">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" Margin="0,20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
+                    <ColumnDefinition Width="300" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="아이디" />
+                <TextBox
+                    Grid.Column="1"
+                    Margin="20,0,0,0"
+                    Text="{Binding UserId}" />
+            </Grid>
+
+            <Grid Grid.Row="1" Margin="0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
+                    <ColumnDefinition Width="300" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="비밀번호" />
+                <TextBox
+                    Grid.Column="1"
+                    Margin="20,0,0,0"
+                    Text="{Binding Password}" />
+            </Grid>
+
+            <Button
+                Grid.Row="2"
+                Margin="0,10"
+                Command="{Binding LoginCommand}"
+                Content="로그인" />
         </Grid>
-    </Grid>
+    </Border>
 </UserControl>
