--- a/ForSuccess/Views/LoginView.xaml
+++ b/ForSuccess/Views/LoginView.xaml
@@ -40,7 +40,7 @@
                 <TextBox
                     Grid.Column="1"
                     Margin="20,0,0,0"
-                    Text="{Binding UserId}" />
+                    Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
 
             <Grid Grid.Row="1" Margin="0,10">
@@ -52,7 +52,7 @@
                 <TextBox
                     Grid.Column="1"
                     Margin="20,0,0,0"
-                    Text="{Binding Password}" />
+                    Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
 
             <Button
