--- a/ForSuccess/Views/LoginView.xaml
+++ b/ForSuccess/Views/LoginView.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ForSuccess.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:utils="clr-namespace:ForSuccess.Utils"
     d:DesignHeight="450"
     d:DesignWidth="800"
     FontSize="24"
@@ -49,10 +49,16 @@
                     <ColumnDefinition Width="300" />
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="비밀번호" />
+                <!--
                 <TextBox
                     Grid.Column="1"
                     Margin="20,0,0,0"
                     Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" />
+                -->
+                <PasswordBox
+                    Grid.Column="1"
+                    Margin="20,0,0,0"
+                    utils:PasswordBoxHelper.BoundPassword="{Binding Password, Mode=TwoWay}" />
             </Grid>
 
             <Button
