--- a/ForSuccess/App.xaml
+++ b/ForSuccess/App.xaml
@@ -17,6 +17,10 @@
             <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
                 <views:LoginView />
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
+                <views:RegisterView />
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
