--- a/ForSuccess/Views/RegisterView.xaml
+++ b/ForSuccess/Views/RegisterView.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl
-    x:Class="ForSuccess.Views.LoginView"
+    x:Class="ForSuccess.Views.RegisterView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ForSuccess.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="clr-namespace:ForSuccess.Utils"
     d:DesignHeight="500"
@@ -30,9 +31,10 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0" Margin="0,20">
+            <Grid Grid.Row="0" Margin="0,10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
                     <ColumnDefinition Width="300" />
@@ -49,6 +51,18 @@
                     <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
                     <ColumnDefinition Width="300" />
                 </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="이름" />
+                <TextBox
+                    Grid.Column="1"
+                    Margin="20,0,0,0"
+                    Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+
+            <Grid Grid.Row="2" Margin="0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
+                    <ColumnDefinition Width="300" />
+                </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="비밀번호" />
 
                 <PasswordBox
@@ -57,19 +71,25 @@
                     utils:PasswordBoxHelper.BoundPassword="{Binding Password, Mode=TwoWay}" />
             </Grid>
 
-            <Button
-                Grid.Row="2"
-                Margin="0,5,0,5"
-                Command="{Binding LoginCommand}"
-                Content="로그인" />
+            <Grid Grid.Row="3" Margin="0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
+                    <ColumnDefinition Width="300" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="비밀번호 확인" />
+
+                <PasswordBox
+                    Grid.Column="1"
+                    Margin="20,0,0,0"
+                    utils:PasswordBoxHelper.BoundConfirmPassword="{Binding ConfirmPassword, Mode=TwoWay}" />
+            </Grid>
 
             <Button
-                Grid.Row="3"
-                Background="Transparent"
-                Command="{Binding ViewRegisterCommand}"
+                Grid.Row="4"
+                Margin="0,10"
+                Command="{Binding RegisterCommand}"
                 Content="회원가입"
-                FontSize="14"
-                Foreground="{StaticResource BrushPrimary2}" />
+                FontSize="14" />
         </Grid>
     </Border>
 </UserControl>
