--- a/ForSuccess/Views/RegisterView.xaml
+++ b/ForSuccess/Views/RegisterView.xaml
@@ -32,6 +32,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0" Margin="0,10">
@@ -86,10 +87,18 @@
 
             <Button
                 Grid.Row="4"
-                Margin="0,10"
+                Margin="0,10,0,5"
                 Command="{Binding RegisterCommand}"
                 Content="회원가입"
                 FontSize="14" />
+
+            <Button
+                Grid.Row="5"
+                Background="Transparent"
+                Command="{Binding ViewLoginCommand}"
+                Content="로그인화면"
+                FontSize="14"
+                Foreground="blue" />
         </Grid>
     </Border>
 </UserControl>
