--- a/ForSuccess/Styles/Common.xaml
+++ b/ForSuccess/Styles/Common.xaml
@@ -1,9 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Color x:Key="ColorPrimary1">#4f86f7</Color>
     <Color x:Key="ColorPrimary2">#99badd</Color>
+    <Color x:Key="ColorPink1">#C73F69</Color>
+    <Color x:Key="ColorPink2">#EBA5BB</Color>
+    <Color x:Key="ColorPink3">#CD5278</Color>
+    <Color x:Key="ColorWhite">#FFFFFF</Color>
+    <Color x:Key="ColorGray1">#aaaaaa</Color>
+    <Color x:Key="ColorGray2">#dddddd</Color>
 
     <SolidColorBrush x:Key="BrushPrimary1" Color="{StaticResource ColorPrimary1}" />
     <SolidColorBrush x:Key="BrushPrimary2" Color="{StaticResource ColorPrimary2}" />
+    <SolidColorBrush x:Key="BrushPink1" Color="{StaticResource ColorPink1}" />
+    <SolidColorBrush x:Key="BrushPink2" Color="{StaticResource ColorPink2}" />
+    <SolidColorBrush x:Key="BrushPink3" Color="{StaticResource ColorPink3}" />
+    <SolidColorBrush x:Key="BrushWhite" Color="{StaticResource ColorWhite}" />
+    <SolidColorBrush x:Key="BrushGray1" Color="{StaticResource ColorGray1}" />
+    <SolidColorBrush x:Key="BrushGray2" Color="{StaticResource ColorGray2}" />
 
     <Style x:Key="TextBoxBase" TargetType="Control">
         <Setter Property="VerticalAlignment" Value="Center" />
