--- a/ForSuccess/Views/HomeView.xaml
+++ b/ForSuccess/Views/HomeView.xaml
@@ -2,13 +2,143 @@
     x:Class="ForSuccess.Views.HomeView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:ForSuccess.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa="http://schemas.fontawesome.com/icons/svg"
     xmlns:local="clr-namespace:ForSuccess.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    Width="1200"
+    Height="700"
     mc:Ignorable="d">
     <Grid>
-        <TextBlock Text="Home" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="1.2*" />
+            </Grid.ColumnDefinitions>
+
+            <Border Background="#fefefe" />
+            <Border Grid.Column="1" Background="{StaticResource BrushPink1}" />
+        </Grid>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="1.2*" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0">
+
+                <StackPanel
+                    Margin="0,50,0,10"
+                    HorizontalAlignment="Center"
+                    Orientation="Horizontal">
+                    <Button Style="{StaticResource CalendarButton}">
+                        <fa:ImageAwesome Icon="Solid_AngleLeft" Style="{StaticResource angle}" />
+                    </Button>
+
+                    <Button Content="2022" Style="{StaticResource CalendarButton}" />
+                    <Button Content="2023" Style="{StaticResource CalendarButton}" />
+                    <Button
+                        Content="2024"
+                        FontSize="24"
+                        Foreground="{StaticResource BrushPink1}"
+                        Style="{StaticResource CalendarButton}" />
+                    <Button Content="2025" Style="{StaticResource CalendarButton}" />
+                    <Button Content="2026" Style="{StaticResource CalendarButton}" />
+
+                    <Button Style="{StaticResource CalendarButton}">
+                        <fa:ImageAwesome Icon="Solid_AngleRight" Style="{StaticResource angle}" />
+                    </Button>
+                </StackPanel>
+
+                <TextBlock
+                    Margin="20,0,20,0"
+                    FontSize="24"
+                    Foreground="{StaticResource BrushPink2}"
+                    Text="11"
+                    TextAlignment="Center" />
+                <Separator
+                    Height="0.8"
+                    Margin="20,20,20,20"
+                    Background="#CACACA" />
+                <Calendar
+                    CalendarDayButtonStyle="{DynamicResource CalendarCalendarDayButtonStyle1}"
+                    CalendarItemStyle="{DynamicResource CalendarCalendarItemStyle1}"
+                    Style="{DynamicResource CalendarStyle1}" />
+            </StackPanel>
+
+            <StackPanel Grid.Column="1">
+                <!--  Title  -->
+                <StackPanel Margin="30,45,30,10" Orientation="Horizontal">
+                    <TextBlock
+                        FontSize="50"
+                        Foreground="#ffffff"
+                        Text="16" />
+
+                    <StackPanel
+                        Grid.Column="1"
+                        Margin="10,0,0,0"
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            FontSize="24"
+                            Foreground="{StaticResource BrushWhite}"
+                            Text="November" />
+                        <TextBlock
+                            FontSize="24"
+                            Foreground="{StaticResource BrushPink2}"
+                            Text="Monday" />
+                    </StackPanel>
+                </StackPanel>
+
+                <!--  ADd Notes  -->
+                <Border
+                    Width="600"
+                    Margin="0,30,0,20"
+                    Padding="17,15,5,15"
+                    HorizontalAlignment="Center"
+                    Background="{StaticResource BrushPink3}"
+                    CornerRadius="10">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <Grid Grid.Column="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <fa:ImageAwesome
+                                Width="15"
+                                Height="15"
+                                Icon="Solid_Pencil"
+                                PrimaryColor="{StaticResource BrushPink2}" />
+                            <TextBox x:Name="txtNote" Style="{StaticResource CalendarTextBox}" />
+                        </Grid>
+                        <Button Grid.Column="1" Style="{StaticResource CalendarButton}">
+                            <fa:ImageAwesome
+                                Width="28"
+                                Height="28"
+                                Icon="Solid_CirclePlus"
+                                PrimaryColor="{StaticResource BrushWhite}" />
+                        </Button>
+                    </Grid>
+                </Border>
+
+                <StackPanel>
+                    <controls:TodoItem
+                        Title="Post on social networks"
+                        Icon="Regular_CircleCheck"
+                        Color="{StaticResource BrushPink2}" />
+                    <controls:TodoItem
+                        Title="Build a demo of the app"
+                        Icon="Regular_Circle"
+                        Color="{StaticResource BrushPink2}" />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
