--- a/ForSuccess/Views/HomeView.xaml
+++ b/ForSuccess/Views/HomeView.xaml
@@ -88,6 +88,7 @@
                         <fa:ImageAwesome Icon="Solid_AngleLeft" Style="{StaticResource angle}" />
                     </Button>
                     <TextBlock
+                        Width="50"
                         Margin="20,0,20,0"
                         FontSize="24"
                         Foreground="{StaticResource BrushPink2}"
@@ -105,24 +106,6 @@
                     Height="0.8"
                     Margin="20,20,20,20"
                     Background="#CACACA" />
-
-                <StackPanel
-                    Margin="10"
-                    HorizontalAlignment="Center"
-                    Orientation="Horizontal">
-                    <Button
-                        Command="{Binding UpdateCalendarCommand}"
-                        CommandParameter="PreviousMonth"
-                        Content="Previous Month" />
-                    <Button
-                        Command="{Binding UpdateCalendarCommand}"
-                        CommandParameter="Today"
-                        Content="Today" />
-                    <Button
-                        Command="{Binding UpdateCalendarCommand}"
-                        CommandParameter="NextMonth"
-                        Content="Next Month" />
-                </StackPanel>
                 <Calendar
                     CalendarDayButtonStyle="{DynamicResource CalendarCalendarDayButtonStyle1}"
                     CalendarItemStyle="{DynamicResource CalendarCalendarItemStyle1}"
