월,요일 영어 업데이트

--- a/ForSuccess/Views/HomeView.xaml
+++ b/ForSuccess/Views/HomeView.xaml
@@ -120,7 +120,7 @@
                     <TextBlock
                         FontSize="50"
                         Foreground="#ffffff"
-                        Text="16" />
+                        Text="{Binding CurrentDay}" />
 
                     <StackPanel
                         Grid.Column="1"
@@ -129,15 +129,15 @@
                         <TextBlock
                             FontSize="24"
                             Foreground="{StaticResource BrushWhite}"
-                            Text="November" />
+                            Text="{Binding CurrentMonthEng}" />
                         <TextBlock
                             FontSize="24"
                             Foreground="{StaticResource BrushPink2}"
-                            Text="Monday" />
+                            Text="{Binding CurrentDayEng}" />
                     </StackPanel>
                 </StackPanel>
 
-                <!--  ADd Notes  -->
+                <!--  Add Notes  -->
                 <Border
                     Width="600"
                     Margin="0,30,0,20"
